pom udate